# Sadique_Timileyin

./: .gitignore  README.md  pyproject.toml
data_cleaning/: .gitignore  InconsistentData.csv  Inconsistent_Data.csv  Inconsistent_data.ipynb  README.md
project-1/: .gitignore  README.md  main.py  test_main.py
project-1_test/: .gitignore  README.md  main.py  test_main.py
project2/: .gitignore  Revised_cost.csv  feature_engineering.ipynb  missing dataset.ipynb
project_7/: Flights_data.pptx  flights_data.ipynb
