[tool.poetry]
name = "sadique-timileyin"
version = "0.1.0"
description = "\"libary update\""
authors = ["Strike_Squad"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.1"
pandas = "^2.1.2"
gspread = "^5.12.0"
logging = "^0.4.9.6"
selenium = "^4.15.2"
webdriver-manager = "^4.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
